<resources>
    <string name="app_name">Polish Tracker</string>
    <string name="logout_title">Logout</string>
    <string name="my_favorites_title">My Favorites</string>

    <string name="videoView">videoView</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Log In</string>
    <string name="create_new_account_label">Sign Up</string>
    <string name="cancel_label">Cancel</string>
    <string name="submit_label">Submit</string>
    <string name="list_label">My list</string>
    <string name="add_label">Add on</string>
    <string name="favorite_label">My favorites</string>
    <string name="polish_name_label">Polish</string>
    <string name="polish_type_label">Type</string>
    <string name="upload_label">Upload image</string>
    <string name="name_label">Name</string>

    <string name="polish_regular_label">Regular</string>
    <string name="polish_gel_label">Gel</string>
    <string name="polish_dipping_label">Dipping Powder</string>

    <string name="add_polish_label">Polish</string>


    <string name="search_keyword_label">Enter Search Keyword</string>
    <string name="search_label">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textView">Text view</string>
    <string name="note">Note:</string>
    <string name="comment">Add a comment</string>
    <string name="addComment">Post</string>
    <string name="heart">Heart Image</string>
    <string name="todo">TODO</string>
    <string name="unlike">Remove</string>
    <string name="logout">Log out</string>
    <string name="username">Name</string>

    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome to Polish Tracker</string>
    <string name="start">Start</string>
    <string name="uploadimage">Upload an image</string>
    <string name="main_menu">Main menu</string>
    <string name="todofix">TODO</string>
    <string name="remove">Remove</string>
    <string name="search_hint">color</string>


</resources>