<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/semicircle"
    android:padding="10dp"
    tools:context=".fragments.MenuFragment"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="111dp">

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/baumans"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFavorite" />

    <Button
        android:id="@+id/buttonList"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"

        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/baumans"
        android:text="@string/list_label"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddOn"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/baumans"
        android:text="@string/add_label"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserName" />

    <Button
        android:id="@+id/buttonFavorite"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/baumans"
        android:text="@string/favorite_label"
        android:textAllCaps="false"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonList" />

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/baumans"
        android:text="TextView"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="116dp"
        android:layout_height="131dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintEnd_toStartOf="@+id/buttonList"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>